alignment fix

--- a/src/style.css
+++ b/src/style.css
@@ -1066,6 +1066,11 @@ video {
   margin-bottom: 18px;
 }
 
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .\!mt-\[15px\] {
   margin-top: 15px !important;
 }
@@ -1310,6 +1315,10 @@ video {
   margin-top: 80px;
 }
 
+.ml-6 {
+  margin-left: 1.5rem;
+}
+
 .line-clamp-3 {
   overflow: hidden;
   display: -webkit-box;
@@ -1363,10 +1372,6 @@ video {
 
 .h-10 {
   height: 2.5rem;
-}
-
-.h-16 {
-  height: 4rem;
 }
 
 .h-2 {
@@ -1699,10 +1704,6 @@ video {
 
 .w-14 {
   width: 3.5rem;
-}
-
-.w-16 {
-  width: 4rem;
 }
 
 .w-2\/3 {
@@ -9370,6 +9371,10 @@ html {
 
   .lg\:mt-\[100px\] {
     margin-top: 100px;
+  }
+
+  .lg\:mt-0 {
+    margin-top: 0px;
   }
 
   .lg\:block {
